src/css/Events.css
/* ... */
.details-CEheader{
    color: #ED6495;
    font-size: 20px;
    font-weight: 500;
    letter-spacing: .06em;
    text-shadow: 0 1px 1px rgba(190, 88, 121, 0.492);  
    text-align: center;
}
.details-CE{
    color: #000;
    font-size: 23px;
    margin-left: 8px;
    text-align: start;
}
.timeline {
    color: #6474ED;
    letter-spacing: .03em;
    margin: 5px;
}
.deadline{ 
    color: red;
    font-size: 21px;
    letter-spacing: .02em;
    text-shadow: 0 1px 1px rgba(255, 20, 95, 0.741);   
}

@media screen and (max-width: 1000px){
    .current-img{
        box-shadow: 1px 1px 2px 2px rgba(26, 22, 20, 0.246);
        max-height: 700px;
        /* width: 100%; */
    }
    .collapse-details{
        border: 1px rgba(0, 0, 0, 0.111);
        margin: 5px 10px 5px 10px;
        min-height: 250px;
        width: 600px;
    }
    .collapse-toggle {
        color: #6474ED;
        font-weight: 500;
        /* margin: 5px 5px 5px 5px; */
        /* text-shadow: 0 1px 1px rgba(190, 88, 121, 0.492);     */
    }
    .description-CE-container{
        margin: 8px;
        padding: 10px;
        word-spacing: 3px;
    }
    .description{
        margin: 5px 5px 5px 15px; 
        /* 15px on the right aligns with the collapse-toggle on smaller screens */
    } 
    .timeline {
        color: #6474ED;
        font-size: 18px;
        letter-spacing: .03em;
        margin: 5px;
    }
    .details-CE{
        color: #000;
        font-size: 18px;
        margin-left: 8px;
        text-align: start;
    }
}
@media (min-width: 1000px) and (max-width: 1400px) {
    .current-img{
        /* border-radius: 20px; */
        box-shadow: 1px 1px 2px 2px rgba(26, 22, 20, 0.246);
        max-height: 600px;
        /* object-fit: contain; */
        /* max-width: 900px; */
    }
    .timeline {
        color: #6474ED;
        font-size: 19px;
        letter-spacing: .01em;
        margin: 5px;
    }
    .details-CE{
        color: #000;
        font-size: 18px;
        margin-left: 8px;
    }
}
@media (max-height: 1000px) and (max-width: 2000px) {
    .current-img{
        /* border-radius: 20px; */
        box-shadow: 1px 1px 2px 2px rgba(123, 111, 105, 0.361);
        max-height: 700px;
        /* object-fit: cover; */
        object-fit: none;
        max-width: 500px;
    }
}
@media (min-height: 800px) and (max-height:1000px){
    .current-img{
        margin: 0px 10px 10px 10px;
        max-height: 500px;
        max-width: 900px;
    }
    .description-CE-container{
        padding: 15px;
    }
}

/* Events Sign Up */

.event-signup-container {
    align-items: start;
    /* background: linear-gradient(
        to top, 
        #E8EFFC 0%,
        #A4C1F4 10%,
        #09676f6d 35%,
        #276BE5 60%, 
        #0c2147 100%
    ); */
    background-color: #A4C1F4;
    border: 1px solid #000;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: start;
    margin: 5% auto;
    padding: 10px; 
    width: 80%;
    height: auto;
}
.section-header{
    color: #ED6495;
    font-size: 27px;
    margin: 20px;
}
.question-mark-icon {
    cursor: pointer;
    display: flex;
    /* flex-direction: column; */
    /* margin-left: 8px; */
}
.bi-question-circle{
    fill: #000;
    height: 40px;
    margin: 10px 0 0 0;
    width: 30px;
}
.bi-question-circle:hover{
   fill: #ED6495;
}
.details-box {
    background-color: #A4C1F4;
    color: rgb(255, 255, 255);
    cursor: help;
    margin-top: 10px;
    padding: 10px;
}

.signup-form{
    /* background-color:#E8EFFC; */
    color: #000;
    /* display: flex; */
    /* margin: 0 0 0 50px; */
    text-align: start;
    /* width: 80%; */
}
.signup-form > input {
    /* display: inline-block; */
    /* background-color: #A4C1F4; */
    /* border-bottom: 2px #000; */
    /* border: 2px solid; */
    /* outline: inset #000000; */
    outline-color: #6474ED;
    padding: 10px;
    margin: 5px;
    width: 300px;
    /* height: 3%; */
    /* display: inline; */
}
#duplicate,
.duplicate {
    display: inline-block;
    /* height: 40px; */
}
#duplicate {
    border: none;
    border-radius: 5px;
    height: 40px;
    margin-left: 5px;
    outline-color: #000;
    width: 100px;

}
.signup-form label{
    font-size: 22px;
    margin: 5px;
    /* width: 300px; */
    /* add to smaller screen to fix the collapse toggle issue with responsive design */
}
#shirt_size,
#pants_size,
#shoe_size{
    width: 200px;
}
#budget{
    width: 70px;
}

.welcome, .welcome-2{
    color:#fff;
    display: inline;
    font-size: 47px;
    margin: 10px;
}
.intro-container {
    display: flex;
    /* align-items: center; */
}

.rules-container{
    /* display: flex; */
    /* flex-direction: column; */
    margin-right: 10px;
    max-width: 1200px;
    /* min-height: 300px; */
    /* width: 220px; */
}
.rules-h3{
    color:#276BE5;
    cursor: pointer;
    font-weight: 500;
    margin: 5px 1px 5px 10px;
}
.rules-every{
    font-weight: 700;
    text-decoration: underline;
}
.rules-not{
    color:#276BE5;
    font-weight: 700;
    text-decoration:underline;
}
.rules{
    color:#000;
    cursor:default;
    font-size: 20px;
    list-style: decimal;
    margin-left: 40px;
    max-width: 80%;
    /* text-indent: 20px; */
}
.terms-container{
    align-items: center;
    display: flex;
    justify-content: center;
    /* margin-left: 80px; */
    margin: 10px;
    /* vertical-align: top; */
}
#terms-checkbox{
    cursor: pointer;
    height: 20px;
    /* padding: 10px; */
    /* vertical-align: top */
    width: 20px;
}
#terms-text{
    color: #fff;
    cursor: pointer;
    display: inline;
    font-size: 20px;
    font-weight: 500;
}

.confirm {
    border: 2px solid #FFFAEB;
    border-radius: 30px;
    font-size: 20px;
    /* font-weight: 500; */
    padding: 10px 20px;
    /* padding: 10px 20px 10px 20px; */
    width: auto;
}

.conclusion{
    font-size: 20px;
    margin: 20px 2px 20px 2px;

}
/* ... */

